--- a/estilo/style.css
+++ b/estilo/style.css
@@ -1,5 +1,69 @@
 @charset "UTF8";
 
-body{
+
+*{
+    padding:0px;
+    margin: 0px;
+    
+}
+
+html, body{
+    min-height: 100vh;
     background-color: gray;
+}
+
+header{
+    background-color:#000000;
+    color:white;
+    text-align: center;
+}
+
+header > h1 {
+    padding-top:50px;
+    font-variant: small-caps;
+}
+
+header > p{
+    padding-bottom: 50px;
+}
+
+header a, footer a{
+    color:white;
+    text-decoration: none;
+    font-weight: bolder;
+}
+
+header a:hover, footer a:hover{
+    text-decoration: underline;
+}
+
+section{
+    padding-top:10vh;
+    padding-bottom:10vh;
+    line-height: 2em;
+    padding-left:30px;
+
+}
+
+section.normal{
+    background-color:white;
+    color:black;
+}
+
+section.imagem{
+    background-color:rgb(65, 60, 60);
+    color:white;
+}
+
+section.imagem > p{
+    background-color:black;
+    width: 400px;
+}
+
+footer{
+    background-color: black;
+    color:white;
+    text-align: center;
+    padding:15px;
+
 }
