--- a/estilo/style.css
+++ b/estilo/style.css
@@ -1,26 +1,40 @@
 @charset "UTF8";
 
+@import url('https://fonts.googleapis.com/css2? family= Passion+One & display=swap');
+@import url('https://fonts.googleapis.com/css2? family= Sriracha & display=swap');
+
+:root{
+    --font1:Verdana, Geneva, Tahoma, sans-serif;
+    --font2:'Passion One', cursive;
+    --font3:'Sriracha', cursive;
+
+}
 
 *{
     padding:0px;
-    margin: 0px;
-    
+    margin: 0px;    
 }
 
 html, body{
     min-height: 100vh;
     background-color: gray;
+    font-family: var(--font1);
+    
 }
 
 header{
     background-color:#000000;
     color:white;
     text-align: center;
+    
 }
 
 header > h1 {
     padding-top:50px;
     font-variant: small-caps;
+    font-family: var(--font2);
+    font-size:5vw;
+
 }
 
 header > p{
@@ -42,7 +56,8 @@ section{
     padding-bottom:10vh;
     line-height: 2em;
     padding-left:30px;
-
+    font-family: var(--font3);
+    font-size:3.5vw;
 }
 
 section.normal{
@@ -56,8 +71,10 @@ section.imagem{
 }
 
 section.imagem > p{
+    display:inline-block;
+    padding:5px;
     background-color:black;
-    width: 400px;
+    
 }
 
 footer{
