incluindo imagens e efeito parallax

--- a/estilo/style.css
+++ b/estilo/style.css
@@ -7,7 +7,6 @@
     --font1:Verdana, Geneva, Tahoma, sans-serif;
     --font2:'Passion One', cursive;
     --font3:'Sriracha', cursive;
-
 }
 
 *{
@@ -60,6 +59,10 @@ section{
     font-size:3.5vw;
 }
 
+section > p{
+    padding-bottom: 1em;
+}
+
 section.normal{
     background-color:white;
     color:black;
@@ -68,14 +71,29 @@ section.normal{
 section.imagem{
     background-color:rgb(65, 60, 60);
     color:white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.486);
+    background-size:cover ;
+    background-attachment: fixed;
 
 }
 
 section.imagem > p{
     display:inline-block;
     padding:5px;
-    background-color:black;
+    background-color:rgba(0, 0, 0, 0.459);
     
+}
+
+section#img001{
+    background-image: url(/imagens/background001.jpg);
+    background-position: right center;
+    
+}
+
+section#img002{
+    background-image:url(/imagens/background002.jpg);
+    background-position: right center;
+    background-size:color;
 }
 
 footer{
